# Github_analyzer

./: Broker.py  DAO.py  QueryGit.py  Query_Txt.py  README.md  TokenUtil.py  db_default.db  main.py  prova.db  prova.ini  prova_API.py  pyproject.toml  requirements.txt
Broker/: Broker.py  DAO.py  DAOS.py  DB_manager.py  QueryGit.py  Query_Txt.py  TokenUtil.py
Controller/: Controller.py
DBManager/: DAOS.py  DB_manager.py
Datas/: Broker.py
Datas/DB/: DAOS.py  DB_manager.py
Datas/Git/: QueryGit.py  TokenUtil.py
GUI/: Window_manager.py  windows.py
QueryGit/: QueryGit.py
RichiestaPagine/: Request_Code.py
Unit_elaborazione/: AbstractElaborazione.py  Analisi_sorgente.py  Cloc_Analize.py  Cloc_analize.py  Controller.py  Request_Code.py
Unit_elaborazione/source_analyze/: Analisi_sorgente.py
Util/: Query_Txt.py  db_default.db  logger.py  prova.db  prova.ini  specs.ini
