[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Github_analyzer"
version = "0.0.1"
authors = [
  { name="Stefano Marano", email="author@example.com" },
]
description = "A Simple tool for analyze github repositories"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/StefanoMarano80017/Github_analyzer"
"Bug Tracker" = "https://github.com/StefanoMarano80017/Github_analyzer/issues"